custos-external-applications/custos-ssl-certificate-manager/src/main/infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
    - http:
        paths:
          - path: /.well-known/acme-challenge
            pathType: Prefix
            backend:
              service:
                name: cert-updater-nginx-service
                port:
                  number: 80
